<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/exerciseToolbar"
            android:layout_width="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/colorSurface"
            app:title="@string/exercice"
            app:titleTextColor="@color/colorSurface"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/huge_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/exerciseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Flexão"
                android:layout_marginTop="@dimen/small_margin"
                style="@style/TextAppearance.AppTheme.Headline1"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppTheme.Headline6"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/execution_example"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exerciseRecycler"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_height="200dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppTheme.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expecification"
                android:layout_marginTop="@dimen/default_margin_alt"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/exerciseExpecification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Realize 20 repetições em 3 séries diferentes."
                style="@style/TextAppearance.AppTheme.Subtitle2"
                android:layout_marginTop="@dimen/small_margin"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppTheme.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="@dimen/default_margin_alt"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/exerciseDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/description_example"
                style="@style/TextAppearance.AppTheme.Subtitle2"
                android:layout_marginTop="@dimen/small_margin"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppTheme.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:layout_marginTop="@dimen/default_margin_alt"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/default_margin_alt"
                android:layout_marginTop="@dimen/default_margin_alt">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/exerciseVideo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:enableAutomaticInitialization="false" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>