<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/introBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/imagery_intro" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/default_margin"
        android:layout_height="@dimen/intro_bar_height"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/TextAppearance.AppTheme.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorSurface" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppTheme.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/intro_motivation"
            android:textColor="@color/colorSurface" />

    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_marginLeft="@dimen/huge_margin"
        android:layout_marginRight="@dimen/huge_margin"
        android:layout_height="wrap_content"
        android:text="@string/do_sign_in"
        app:cornerRadius="100dp"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:text="@string/do_sign_up"
        android:layout_marginRight="@dimen/huge_margin"
        android:layout_marginLeft="@dimen/huge_margin"
        android:layout_height="wrap_content"
        app:cornerRadius="100dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorPrimary"
        android:layout_marginBottom="@dimen/huge_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>